@@ -60,6 +60,7 @@
 	<string id="30215">library</string>
 	<string id="30216">queued</string>
 	<string id="30216">MOVIES</string>
+	<string id="30217">Settings</string>
 
 
     <string id="30043">Options</string>
